# swagger.json
@@ -54,6 +54,9 @@
                 "phone": {
                   "example": "any"
                 },
+                "favColor": {
+                  "example": "any"
+                },
                 "address": {
                   "example": "any"
                 },
@@ -67,6 +70,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -121,6 +127,9 @@
                 "phone": {
                   "example": "any"
                 },
+                "favColor": {
+                  "example": "any"
+                },
                 "address": {
                   "example": "any"
                 },
@@ -134,6 +143,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
